<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_set"
        android:textSize="16sp"
        android:text="@string/str_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText_address"
        android:padding="2dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_edittext"
        android:hint="@string/str_url_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_set_address"
        android:text="@string/str_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>